# bvh

./: .gitignore
src/bvh/v2/: CMakeLists.txt  binned_sah_builder.h  bvh.h  bvhspan.h  default_builder.h  index.h  mini_tree_builder.h  node.h  platform.h  reinsertion_optimizer.h  sweep_sah_builder.h  top_down_sah_builder.h
src/bvh/v2/c_api/: bvh_impl.h
test/: CMakeLists.txt  benchmark.cpp  benchmark_knn.cpp  hittest.cpp  load_bin.h  simple_example.cpp  simple_knn.cpp
